Add versioning and javadoc.

--- a/buildSrc/src/org.jdrupes.java-common-conventions.gradle
+++ b/buildSrc/src/org.jdrupes.java-common-conventions.gradle
@@ -54,30 +54,29 @@ sourceSets {
 }
 
 java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
-    }
+    sourceCompatibility = "21"
+    targetCompatibility = "21"
 }
 
-// jar {
-//     manifest {
-//         def matchExpr = [ project.tagName + "*" ]
-//         
-//         inputs.property("gitDescriptor",
-//             { grgit.describe(always: true, match: matchExpr) })
-//         
-//         // Set Git revision information in the manifests of built bundles
-//         def gitDesc = grgit.describe(always: true, match: matchExpr)
-//         attributes([
-//             "Implementation-Title": project.name,
-//             "Implementation-Version": "$project.version (built from ${gitDesc})",
-//             "Implementation-Vendor": grgit.repository.jgit.repository.config.getString("user", null, "name")
-//                 + " (" + grgit.repository.jgit.repository.config.getString("user", null, "email") + ")",
-//             "Git-Descriptor": gitDesc,
-//             "Git-SHA": grgit.head().id,
-//         ])
-//     }
-// }
+jar {
+    manifest {
+        def matchExpr = [ project.tagName + "*" ]
+        
+        inputs.property("gitDescriptor",
+            { grgit.describe(always: true, match: matchExpr) })
+        
+        // Set Git revision information in the manifests of built bundles
+        def gitDesc = grgit.describe(always: true, match: matchExpr)
+        attributes([
+            "Implementation-Title": project.name,
+            "Implementation-Version": "$project.version (built from ${gitDesc})",
+            "Implementation-Vendor": grgit.repository.jgit.repository.config.getString("user", null, "name")
+                + " (" + grgit.repository.jgit.repository.config.getString("user", null, "email") + ")",
+            "Git-Descriptor": gitDesc,
+            "Git-SHA": grgit.head().id,
+        ])
+    }
+}
 
 eclipse {
 
