--- a/org.jdrupes.jsonb.jmx/build.gradle
+++ b/org.jdrupes.jsonb.jmx/build.gradle
@@ -15,7 +15,11 @@ dependencies {
     testImplementation 'org.apache.johnzon:johnzon-jsonb:2.0.1'
 }
 
-archivesBaseName = "jsonb-beans"
+// // See https://discuss.gradle.org/t/how-to-access-the-properties-of-the-base-extension/49619
+// base {
+//     archivesName = "jsonb-jmx"
+// }
+archivesBaseName = "jsonb-jmx"
 
 // Derive bundle version and propagate to bnd
 def bundleVersion = isSnapshot
