--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,12 @@ buildscript {
 
 plugins {
     id 'biz.aQute.bnd.builder' version "7.0.0"
+    id 'org.ajoberstar.git-publish' version '4.2.0'
+    id "io.github.gradle-nexus.publish-plugin" version "1.1.0"
+    id 'eclipse'
+    // Make available, don't apply
     id 'org.ajoberstar.grgit' version '5.2.0' apply false
     id 'pl.allegro.tech.build.axion-release' version '1.17.2' apply false
-    id 'org.ajoberstar.git-publish' version '4.2.0'
-    id 'eclipse'
 }
 
 allprojects {
@@ -75,7 +77,16 @@ task stage {
     
     if (JavaVersion.current() == JavaVersion.VERSION_23) {
         // Publish JavaDoc
-//        dependsOn gitPublishPush
+        dependsOn gitPublishPush
+    }
+}
+
+nexusPublishing {
+    repositories {
+        sonatype {
+            username = project.properties['sonatypeTokenKey'] ?: "nouser"
+            password = project.properties['sonatypeTokenSecret'] ?: "nopass"
+        }
     }
 }
 
