--- a/org.jdrupes.jsonb.jmx/build.gradle
+++ b/org.jdrupes.jsonb.jmx/build.gradle
@@ -24,20 +24,19 @@ def bundleVersion = isSnapshot
     ? (version.substring(0, version.lastIndexOf("-SNAPSHOT")) + ".-\${tstamp}-SNAPSHOT")
     : (version + ".rel")
 
-ext.bnd = [
-    'Bundle-Name': 'JDrupes JSON-B JMX plugin',
-    'Bundle-SymbolicName': 'org.jdrupes.jsonb.jmx',
-    'Bundle-Copyright': 'Michael N. Lipp (c) 2024',
-    'Bundle-License': 'https://www.gnu.org/licenses/agpl-3.0.txt',
-    'Bundle-Version': bundleVersion,
-    '-sources': 'true',
-    '-runee': 'JavaSE-21',
-    'Export-Package': 'org.jdrupes.jsonb.jmx'
-]
-
 jar {
     manifest {
-        attributes(bnd)
+        attributes('Bundle-Name': 'JDrupes JSON-B JMX plugin',
+            'Bundle-SymbolicName': 'org.jdrupes.jsonb.jmx',
+            'Bundle-Description': 'Json-B convertors for MBeans',
+            'Bundle-Copyright': 'Michael N. Lipp (c) 2024',
+            'Bundle-License': 'https://www.gnu.org/licenses/agpl-3.0.txt',
+            'Bundle-Version': bundleVersion,
+            'Bundle-DocURL': 'https://jdrupes.org/jdrupes-jsonb-beans/javadoc/',
+            '-sources': 'true',
+            '-runee': 'JavaSE-21',
+            'Export-Package': 'org.jdrupes.jsonb.jmx'
+        )
     }
 }
        
